# freeCodeCamp

./:   .babelrc  .babelrc.js  .bowerrc  .dockerignore  .editorconfig  .env  .env.example  .eslintignore  .eslintrc  .eslintrc-base.json  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .jshintignore  .jshintrc  .lintstagedrc.js  .lintstagedrc.mjs  .markdownlint.json  .node-inspectorrc  .npmrc  .nvmrc  .oxfmtrc.json  .prettierignore  .prettierrc  .project  .snyk  .stylelintignore  .stylelintrc.json  .tern-project  .travis.yml  .varci.yml  .vcmrc  .whitesource  010101010100102010101010010101📡🎵🎤🎼🎩🎶📀  1.py  (+474 more)
.circleci/: config.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/: 2022_basic_quiz_game.py  2022_number_guessing_game.py  2022_rock_paper_scissors_game.py  2022_sample_html_index.html  (+16 more)
api-rust/: Cargo.toml
api-rust/actix/: Cargo.toml
api-rust/actix/src/: main.rs
api-rust/actix/src/api/: mod.rs  routes.rs
api-rust/actix/src/boot/: mod.rs  mongodb_boot.rs
api-rust/actix/src/middleware/: mod.rs  request_authorization.rs  send_200_to_non_user.rs
api-rust/fcc/: Cargo.toml
api-rust/fcc/src/: lib.rs
api-rust/fcc/src/models/: mod.rs
api-rust/rocket/: Cargo.toml  Rocket.toml
api-rust/rocket/src/: main.rs
api-rust/rocket/src/api/: catchers.rs  routes.rs
api-rust/rocket/src/boot/: mongodb_boot.rs
api-rust/src/: main.rs
api-rust/src/api/: routes.rs
api-rust/src/boot/: mod.rs  mongodb_boot.rs
api-rust/src/models/: challenge_model.rs  user_model.rs
(+90812 files in other folders)
