[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
fcc = { path = "../fcc" }
futures-util = { version = "0.3.24", default-features = false, features = [
  "std",
] }
mongodb = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
